# manifolds

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
include/: pgs_api.h
include/manifolds/: CartesianPower.h  CartesianPower_Base.h  CartesianProduct.h  CartesianProduct_Base.h  ExpMapMatrix.h  ExpMapQuaternion.h  Manifold.h  Manifold_Base.h  Point.h  RealSpace.h  RealSpace_Base.h  RefCounter.h  ReusableTemporaryMap.h  S2.h  S2_Base.h  SO3.h  SO3_Base.h  ValidManifold.h  defs.h  manifolds_api.h  mnf_assert.h  pgs_assert.h  utils.h  view.h
include/pgsolver/: CartesianProduct.h  ExpMapMatrix.h  Manifold.h  Point.h  RealSpace.h  RefCounter.h  ReusableTemporaryMap.h  SO3.h  defs.h  pgs_api.h  pgs_assert.h  view.h
include/pgsolver/manifolds/: CartesianProduct.h  ExpMapMatrix.h  Manifold.h  Point.h  RealSpace.h  RefCounter.h  ReusableTemporaryMap.h  SO3.h  defs.h  view.h
include/pgsolver/solver/: ConstraintManager.h  ExampleGeometricProblem.h  ExampleProblem.h  Filter.h  HessianUpdater.h  LineSearcher.h  OptimOptions.h  Problem.h  ProblemOnRepresentationSpace.h  Results.h  Solver.h  SolverOptions.h  SymmetricMatrixRegularization.h  TempData.h
include/pgsolver/utils/: BlockDiagonalMatrix.h  LBLT.h  lex_assert.h
matlab/decomposition/: BKStep.m  BKStepSym.m  BunchKaufman.m  BunchKaufmanSym.m  dspr.m  dsptrf.m  lapackBK.m  packed2sym.m  sym2packed.m
src/: CMakeLists.txt  CartesianPower.cpp  CartesianPower_Base.cpp  CartesianProduct.cpp  CartesianProduct.h  CartesianProduct_Base.cpp  ExpMapMatrix.cpp  ExpMapQuaternion.cpp  Manifold.cpp  Manifold.h  Manifold_Base.cpp  Point.cpp  Point.h  Point.hpp  PointOfR.hpp  RealSpace.cpp  RealSpace.h  RealSpace_Base.cpp  ReusableTemporaryMap.cpp  S2.cpp  S2_Base.cpp  SO3.cpp  SO3.h  defs.h  main.cpp  utils.cpp
src/manifolds/: CartesianProduct.cpp  ExpMapMatrix.cpp  Manifold.cpp  Point.cpp  RealSpace.cpp  ReusableTemporaryMap.cpp
src/solver/: .Solver.cpp.swp  ConstraintManager.cpp  ExampleGeometricProblem.cpp  ExampleProblem.cpp  Filter.cpp  HessianUpdater.cpp  LineSearcher.cpp  Problem.cpp  ProblemOnRepresentationSpace.cpp  Solver.cpp  SymmetricMatrixRegularization.cpp
tests/: CMakeLists.txt  CartesianProductTest.cpp  ManifoldTest.cpp  PointTest.cpp  RealSpaceTest.cpp  S2Test.cpp  SO3MatrixTest.cpp  SO3QuaternionTest.cpp  SO3Test.cpp  TypeIdTest.cpp  test1.cpp  testMain.cpp  testTest.cpp  typeId.cpp
